# palert

./: README.md  palert_db.sqlite  pubspec.yaml
integration_test/: simple_test.dart
lib/: main.dart
lib/providers/: engine_settings_provider.dart  notification_settings_provider.dart  product_provider.dart  service_monitor_provider.dart  status_provider.dart  theme_provider.dart
lib/screens/: home_page.dart  settings_page.dart
lib/services/: notification_service.dart  price_engine_service.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: amazon_parser.dart  apin.dart  browser_service_manager.dart  (+5 more)
lib/theme/: app_theme.dart
lib/widgets/: auto_refresh_widget.dart  price_chart.dart  product_details_view.dart  product_list_item.dart  product_list_view.dart  service_status_widget.dart  status_bar.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: amazon_parser.rs  apin.rs  browser_service_manager.rs  database.rs  flipkart_parser.rs  mod.rs  models.rs  price_engine.rs  scraper_engine.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_palert.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_palert.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
