[package]
name = "rust_lib_palert"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
thirtyfour = "0.36.1" # For browser automation (like Selenium)
tokio = { version = "1.46.1", features = ["full"] } # Async runtime needed by thirtyfour
scraper = "0.23.1" # For HTML parsing (like BeautifulSoup)
serde = { version = "1.0.219", features = ["derive"] } # For serializing data structs
serde_json = "1.0.140" # For pretty-printing the final result as JSON
anyhow = "1.0.98" # For easier error handling
regex = "1.11.1" # For regular expression matching
rusqlite = { version = "0.37.0", features = ["bundled"] }
chrono = "0.4.41"
reqwest = { version = "0.12", features = ["json"] } # For HTTP requests to check port availability

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
